--- a/cleaning.ipynb
+++ b/cleaning.ipynb
@@ -128,7 +128,7 @@
     "# read in the json files\n",
     "portfolio = pd.read_json('data/portfolio.json', orient='records', lines=True)\n",
     "profile = pd.read_json('data/profile.json', orient='records', lines=True)\n",
-    "transcript = pd.read_json('data/transcript.json', orient='records', lines=True)"
+    "transcript = pd.read_json('data/transcript.json.zip', orient='records', lines=True)"
    ]
   },
   {
